added list of website
added list of  websites

--- a/index.html
+++ b/index.html
@@ -4,7 +4,12 @@
     </head>
   
   <body>
-
+    
+<01>
+  <1i>w3 schools</1i>
+  <1i>Wes Bos videos</1i>
+  <1i>Mozilla Developer</1i>
+  </ol>
    <h1></h1>
 <img src="https://avatars2.githubsercontent.com/u/47929201>v=4">
 Hello there, awesome person!
