--- a/index.html
+++ b/index.html
@@ -4,7 +4,13 @@
     </head>
   
   <body>
-
+    
+<o1>
+  <li>w3 schools</li>
+  <li>Wes Bos videos</li>
+  <li>Mozilla Developer</li>
+  </o1>
+  
    <h1></h1>
 <img src="https://avatars2.githubsercontent.com/u/47929201>v=4">
 Hello there, awesome person!
