--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
   <body>
     
 <ol>
-  <li>w3 schools</li>
-  <li>Wes Bos videos</li>
-  <li>Mozilla Developer</li>
+  <li><a herf="https://www.w3schools.com/">w3 schools</a>/li>
+  <li><a herf = "https://wesbos.com/">Wes Bos videos</a></li>
+  <li><a herf = "https://developer.mozilla.org/en-US/">Mozilla Developer</a></li>
   </ol>
     
    <h1></h1>
